--- a/app/src/main/res/layout/activity_all_names.xml
+++ b/app/src/main/res/layout/activity_all_names.xml
@@ -7,31 +7,25 @@
     tools:context=".namesfinder.ActivityAllNames"
     android:background="@drawable/ic_bg">
 
+        <!-- RecyclerView for displaying the names -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewNames"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_above="@id/allNamesButtonBack"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_alignParentTop="true"
+            tools:listitem="@layout/item_name" />
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="500dp"
-            android:layout_centerInParent="true">
-
-        <TextView
-            android:id="@+id/allNamesLBL"
-            android:layout_width="wrap_content"
-            android:layout_height="500dp"
-            android:text="Centered Text"
-            android:textColor="@color/black"
-            android:layout_centerInParent="true"
-            />
-        </ScrollView>
-
-
-<Button
-    android:id="@+id/allNamesButtonBack"
-    android:layout_width="100dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginTop="15dp"
-    android:layout_height="wrap_content"
-    android:text="Back"
-    >
-
-</Button>
+        <!-- Back button -->
+        <Button
+            android:id="@+id/allNamesButtonBack"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_alignParentBottom="true"
+            android:text="Back" />
 </RelativeLayout>
