--- a/app/src/main/res/layout/activity_by_category.xml
+++ b/app/src/main/res/layout/activity_by_category.xml
@@ -7,46 +7,21 @@
     tools:context=".namesfinder.ActivityByCategory"
     android:background="@drawable/ic_bg">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="450dp"
-        android:layout_centerInParent="true"
-        >
-
-    <TextView
-        android:id="@+id/BycategoryLBL"
-        android:layout_width="wrap_content"
-        android:layout_height="450dp"
-        android:text="Centered Text"
-        android:layout_centerInParent="true"/>
-    </ScrollView>
-
-
-    <Button
-        android:id="@+id/BycategoryButtonBack"
-        android:layout_width="100dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        >
-
-    </Button>
-
+    <!-- Spinner and Search Button Section -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/BycategoryButtonBack"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="15dp"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
-        <!-- Spinner -->
+        <!-- Spinner for Category -->
         <Spinner
             android:id="@+id/letterSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="20dp"
             android:spinnerMode="dropdown" />
 
         <!-- Search Button -->
@@ -55,7 +30,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search"
-            android:layout_marginStart="16dp" />
+            android:layout_marginBottom="20dp"/>
     </LinearLayout>
 
+    <!-- RecyclerView for displaying names -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewNames"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/letterSpinner"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20dp"/>
+
+    <!-- Back Button -->
+    <Button
+        android:id="@+id/BycategoryButtonBack"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"/>
 </RelativeLayout>
