--- a/app/src/main/res/layout/activity_delete_name.xml
+++ b/app/src/main/res/layout/activity_delete_name.xml
@@ -20,4 +20,11 @@
         android:layout_height="wrap_content"
         android:text="Delete Name"
         android:layout_marginTop="20dp" />
+    <!-- Back button -->
+    <Button
+        android:id="@+id/btnDeleteBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:layout_marginTop="10dp" />
 </LinearLayout>
