--- a/app/src/main/res/layout/activity_random.xml
+++ b/app/src/main/res/layout/activity_random.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Centered Text"
         android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_centerInParent="true"/>
 
 
