--- a/app/src/main/res/layout/item_name.xml
+++ b/app/src/main/res/layout/item_name.xml
@@ -9,6 +9,9 @@
         android:id="@+id/nameItemTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/black" />
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:gravity="center" />
+    />
 </LinearLayout>
