--- a/app/src/main/res/layout/activity_first_letter.xml
+++ b/app/src/main/res/layout/activity_first_letter.xml
@@ -7,18 +7,23 @@
     tools:context=".namesfinder.ActivityFirstLetter"
     android:background="@drawable/ic_bg">
 
-     <ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="450dp"
-    android:layout_centerInParent="true">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@id/letterSpinner"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true">
 
-    <TextView
-        android:id="@+id/ByFirstLetterLBL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Centered Text"
-        android:layout_centerInParent="true"/>
-     </ScrollView>
+        <TextView
+            android:id="@+id/ByFirstLetterLBL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Centered Text"
+            android:textSize="24sp"
+            android:textStyle="bold"            android:lineSpacingExtra="10dp"
+            android:padding="15dp"
+            android:gravity="center" />
+    </ScrollView>
 
     <!-- Back Button -->
     <Button
