--- a/app/src/main/res/layout/activity_first_letter_and_category.xml
+++ b/app/src/main/res/layout/activity_first_letter_and_category.xml
@@ -60,16 +60,22 @@
         android:layout_marginTop="20dp" />
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="350dp"
-        android:layout_centerInParent="true">
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@id/letterSpinner"
+        android:layout_marginTop="200dp"
+        android:layout_centerHorizontal="true">
 
-    <TextView
-        android:id="@+id/ByFirstLetterAndCategortLBL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Centered Text"
-        android:layout_centerInParent="true"/>
+        <TextView
+            android:id="@+id/ByFirstLetterAndCategortLBL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Centered Text"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:lineSpacingExtra="10dp"
+            android:padding="15dp"
+            android:gravity="center" />
     </ScrollView>
 
 </RelativeLayout>
